...
    print('Verifikasi Status: ${currentStore?.verifikasi}');
    print('Is Store Active: $isStoreActive');

    return Scaffold(
      appBar: AppBar(
        title: const Text(
          'Pengaturan Toko',
          style: TextStyle(fontWeight: FontWeight.bold, color: Colors.black),
        ),
        backgroundColor: Colors.white,
        elevation: 0.5,
        foregroundColor: Colors.black,
      ),
...
                const SizedBox(height: 30),

                _buildSectionHeader("Profil"),
                _buildSettingItem(
                  context,
                  icon: Icons.storefront,
                  title: "Edit Nama & Deskripsi",
                  onTap: () async {
                    final result = await context.pushNamed('EditStoreProfile');
                  },
                ),
                _buildSettingItem(
                  context,
                  icon: isStoreActive ? Icons.block : Icons.check_circle,
                  title: isStoreActive ? "Nonaktif Toko" : "Aktifkan Toko",
                  color: isStoreActive ? errorColor : Colors.green,
                  showArrow: false,
                  onTap: () async {
                    final confirm = await CustomConfirmDialog.show(
                      context: context,
                      type: isStoreActive
...
                    }
                  },
                ),
                _buildSettingItem(
                  context,
                  icon: Icons.logout,
                  title: "Keluar",
                  color: errorColor,
                  showArrow: false,
                  onTap: () async {
                    final confirm = await CustomConfirmDialog.show(
                      context: context,
                      type: DialogType.warning,
...
